--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,14 @@
 <html>
-    <head>
-        <title>
-            Scores Game
-        </title>
-        <body>
-            <h1>The score is:</h1>
-            <div>{{score}}</div>
-        </body>
-    </head>
+
+<head>
+    <title>
+        Scores Game
+    </title>
+
+<body>
+    <h1>The score is:</h1>
+    <div id="score">{{score}}</div>
+</body>
+</head>
+
 </html>
